Fixed  visibility of irregular line junctions
The center of the buttons is made white on active/ duplicate to hide the
visibility of irregular line junctions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,33 +42,33 @@ body{
 }
 
 .activebutton {
-	width: 30px;
-	height: 30px;
-	background: rgba(114, 160, 204, 1);
+	width: 10px;
+	height: 10px;
+	background: #FFF;
 	border-radius: 50%;
-	border-width: 2px;
+	border-width: 10px;
 	border-style: solid;
-	border-color: #FFF;
-	margin: 20.5px;	
+	border-color: rgba(114, 160, 204, 1);
+	margin: 22.5px;	
 	float: left;
-	-webkit-box-shadow: 0px 0px 15px 5px rgba(114, 160, 204, 1);
-	-moz-box-shadow: 0px 0px 15px 5px rgba(114, 160, 204, 1);
-	box-shadow: 0px 0px 15px 5px rgba(114, 160, 204, 1);
+	-webkit-box-shadow: 0px 0px 15px 5px #FFF;
+	-moz-box-shadow: 0px 0px 15px 5px #FFF;
+	box-shadow: 0px 0px 15px 5px #FFF;
 }
 
 .duplicatebutton {
-	width: 30px;
-	height: 30px;
-	background: rgba(255, 102, 51, 1);
+	width: 10px;
+	height: 10px;
+	background: #FFF;
 	border-radius: 50%;
-	border-width: 2px;
+	border-width: 10px;
 	border-style: solid;
-	border-color: #FFF;
-	margin: 20.5px;	
+	border-color: rgba(255, 102, 51, 1);
+	margin: 22.5px;	
 	float: left;
-	-webkit-box-shadow: 0px 0px 15px 5px rgba(255, 102, 51, 1);
-	-moz-box-shadow: 0px 0px 15px 5px rgba(255, 102, 51, 1);
-	box-shadow: 0px 0px 15px 5px rgba(255, 102, 51, 1);
+	-webkit-box-shadow: 0px 0px 15px 5px #FFF;
+	-moz-box-shadow: 0px 0px 15px 5px #FFF;
+	box-shadow: 0px 0px 15px 5px #FFF;
 }
 
 .button-reset {
